# pagereplacementpolicy

./: AUTHORS  README  configure.ac  make.debug  make.rel
include/: PageRepPolicy.h  log.h  support.h
src/: Makefile.am  PageRepPolicy.cpp  input2.txt  main.cpp
